nivasa-macros/tests/trybuild/filter_non_struct.stderr
error: expected `struct`
 --> tests/trybuild/filter_non_struct.rs:4:1
  |
4 | fn not_a_filter() {}
  | ^^
