nivasa-macros/tests/trybuild/filter_non_struct.rs
use nivasa_macros::catch;

#[catch(HttpException)]
fn not_a_filter() {}

fn main() {}
